# CEIA-PLN

./: README.md  desafio_4_cplt.ipynb  pyproject.toml
Desafio 1/: Desafio_1.ipynb
Desafio 2/: Desafio_2.ipynb
Desafio 3/: Desafio_3.ipynb  model_lstm.keras  model_rnn.keras
Desafio 4/: Desafio_4.ipynb
