[project]
name = "ceia-pln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
